--- a/src/widgetStyle.css
+++ b/src/widgetStyle.css
@@ -16,6 +16,8 @@ body {
     border: 1px solid rgba(255, 255, 255, 0.2);
     text-align: center;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+
+    -webkit-app-region: drag; 
 }
 
 .city-name {
